--- a/ku_thesis_template.tex
+++ b/ku_thesis_template.tex
@@ -21,6 +21,7 @@
 \import{chap_3/}{chap_3}
 \import{chap_4/}{chap_4}
 \import{chap_5/}{chap_5}
+\import{chap_6/}{chap_6}
 
 % Bibliography, default style from former template.
 \global\long\def\bibname{References}
