--- a/ku_thesis_template.tex
+++ b/ku_thesis_template.tex
@@ -1,5 +1,6 @@
 % Updated by Aaron Barrett 5/18/2022.
 
+\documentclass[12pt,english,letterpaper]{kuthesis}
 \input{thesis_header.tex}
 
 \begin{document}
