--- a/thesis_header.tex
+++ b/thesis_header.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,english,letterpaper]{kuthesis}
+
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{mathptmx}
@@ -51,7 +51,7 @@
 \role{Chairperson}{}{}{}{}{}{}
 \@printd@testrue
 % BOTH dates must be included. 
-\datedefended{TODO}
+\datedefended{03 May 2023}
  % Since the date will likely be unknown, this keeps the blank line from floating above the "Date Approved: " line late signing.
 \dateapproved{TBD}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
