--- a/thesis_header.tex
+++ b/thesis_header.tex
@@ -170,7 +170,7 @@
     {\/\\}{{$\wedge\;$}}1
     {\\\/}{{$\vee\;$}}1
     %{++}{{\code{++}}}1
-    {~}{{\ }}1
+    {~}{{$\sim$}}1
     {\@\@}{{$@$}}1
     {\\mapsto}{{$\mapsto\;$}}1
     {\\hline}{{\rule{\linewidth}{0.5pt}}}1
