--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -66,3 +66,10 @@
   doi       = {10.6028/NIST.SP800-57pt1r5},
   url       = {https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-57pt1r5.pdf},
   }
+
+@Article{CIC,
+  author    = {Christine Paulin-Mohring},
+  title     = {{Introduction to the Calculus of Inductive Constructions}},
+  year      = {2014},
+  url       = {https://inria.hal.science/hal-01094195/document}
+  }
