--- a/thesis_header.tex
+++ b/thesis_header.tex
@@ -16,7 +16,7 @@
 \usepackage{float}
 \usepackage{setspace}
 \usepackage{import}
-\usepackage[authoryear]{natbib}
+\usepackage[numbers]{natbib}
 \doublespacing
 \usepackage[unicode=true,
  bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,
@@ -170,7 +170,8 @@
     {\/\\}{{$\wedge\;$}}1
     {\\\/}{{$\vee\;$}}1
     %{++}{{\code{++}}}1
-    {~}{{$\sim$}}1
+    {~}{{$\neg$}}1
+    {<>}{{$\neq$ }}1
     {\@\@}{{$@$}}1
     {\\mapsto}{{$\mapsto\;$}}1
     {\\hline}{{\rule{\linewidth}{0.5pt}}}1
