--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -2,41 +2,99 @@
 % Encoding: UTF-8
 
 
-@Book{PracticalGuide,
-  author    = {Will Arthur and David Challener and Kenneth Goldman},
-  title     = {A Practical Guide to TPM 2.0: Using the Trusted Platform Module in the New Age of Security},
-  publisher = {Apress},
-  year      = {2015},
-  isbn      = {978-1-4302-6584-9},
-  doi       = {10.1007/978-1-4302-6584-9},
-  url       = {https://link.springer.com/content/pdf/10.1007/978-1-4302-6584-9.pdf},
+% Cite KeyManagement
+% Cite LogicalFoundations
+
+
+@InProceedings{PrivacyCAAnalysis,
+  author    = {Brigid Halling and Perry Alexander},
+  editor    = {Guillaume Brat and Neha Rungta and Arnaud Venet},
+  title     = {{Verifying a Privacy CA Remote Attestation Protocol}},
+  year      = {2013},
+  isbn      = {978-3-642-38088-4},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  url       = {http://cae.ittc.ku.edu/papers/nfm13.pdf},
+  doi       = {10.1007/978-3-642-38088-4_27},
+  booktitle = {NASA Formal Methods},
+  pages     = {398--412}
 }
 
 
-@Manual{TPMSpec,
-  author    = {{Trusted Computing Group}},
-  title     = {Trusted Platform Module Library Specification, Family 2.0, Level 00, Revision 01.59},
-  year      = {2019},
-  url       = {https://trustedcomputinggroup.org/resource/tpm-library-specification/}
+@MastersThesis{TPM12Model,
+  author    = {Brigid R. Halling},
+  title     = {{Towards a Formal Verification of the Trusted Platform Module}},
+  school    = {University of Kansas},
+  year      = {2013}
 }
 
-@Manual{EKSpec,
-  author    = {{Trusted Computing Group}},
-  title     = {TCG EK Credential Profile For TPM Family 2.0, Level 00, Version 2.4, Revision 3},
-  year      = {2021},
-  url       = {https://trustedcomputinggroup.org/wp-content/uploads/TCG_IWG_EKCredentialProfile_v2p4_r3.pdf}
+@InProceedings{DAAAnalysis,
+  author    = {Wesemeyer, Stephan and Newton, Christopher J.P. and Treharne, Helen and Chen, Liqun and Sasse, Ralf and Whitefield, Jorden},
+  title     = {{Formal Analysis and Implementation of a TPM 2.0-Based Direct Anonymous Attestation Scheme}},
+  year      = {2020},
+  isbn      = {9781450367509},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/3320269.3372197},
+  doi       = {10.1145/3320269.3372197},
+  booktitle = {Proceedings of the 15th ACM Asia Conference on Computer and Communications Security},
+  pages     = {784--798},
+  location  = {Taipei, Taiwan},
+  series    = {ASIA CCS '20}
 }
 
-@Book{LogicalFoundations,
-  author    = {Benjamin C. Pierce and Arthur Azevedo de Amorim and Chris Casinghino and Marco Gaboardi and Michael Greenberg and C{\u a}t{\u a}lin Hri{\c t}cu and Vilhelm Sj{\"o}berg and Brent Yorgey},
-  title     = {Logical Foundations},
-  series    = {Software Foundations series, volume 1},
-  publisher = {Electronic textbook},
-  year      = {2022},
-  version   = {6.2},
-  url       = {https://softwarefoundations.cis.upenn.edu/lf-current/index.html}
+
+@InProceedings{PCRAnalysis,
+  author    = {Delaune, Stephanie and Kremer, Steve and Ryan, Mark D. and Steel, Graham},
+  booktitle = {2011 IEEE 24th Computer Security Foundations Symposium}, 
+  title     = {{Formal Analysis of Protocols Based on TPM State Registers}}, 
+  year      = {2011},
+  pages     = {66-80},
+  doi       = {10.1109/CSF.2011.12}
 }
 
+
+
+@InProceedings{EAAnalysis,
+author      = {Shao, Jianxiong and Qin, Yu and Feng, Dengguo and Wang, Weijin},
+title       = {{Formal Analysis of Enhanced Authorization in the TPM 2.0}},
+year        = {2015},
+isbn        = {9781450332453},
+publisher   = {Association for Computing Machinery},
+address     = {New York, NY, USA},
+url         = {https://doi.org/10.1145/2714576.2714610},
+doi         = {10.1145/2714576.2714610},
+booktitle   = {Proceedings of the 10th ACM Symposium on Information, Computer and Communications Security},
+pages       = {273--284},
+location    = {Singapore, Republic of Singapore},
+series      = {ASIA CCS '15}
+}
+
+
+
+@InProceedings{AuthAnalysis,
+  author    = {Delaune, St{\'e}phanie and Kremer, Steve and Ryan, Mark D. and Steel, Graham},
+  editor    = {Degano, Pierpaolo and Etalle, Sandro and Guttman, Joshua},
+  title     = {{A Formal Analysis of Authentication in the TPM}},
+  booktitle = {Formal Aspects of Security and Trust},
+  year      = {2011},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {111--125},
+  isbn      = {978-3-642-19751-2}
+}
+
+@article{HMACAnalysis,
+author      = {Shao, Jianxiong and Qin, Yu and Feng, Dengguo},
+title       = {{Formal Analysis of HMAC Authorisation in the TPM 2.0 Specification}},
+journal     = {IET Information Security},
+volume      = {12},
+number      = {2},
+pages       = {133--140},
+doi = {10.1049/iet-ifs.2016.0005},
+url = {https://ietresearch.onlinelibrary.wiley.com/doi/abs/10.1049/iet-ifs.2016.0005},
+year = {2018}
+}
 
 @Manual{DevIDSpec-TCG,
   author    = {{Trusted Computing Group}},
@@ -48,6 +106,22 @@
 }
 
 
+@Manual{TPMSpec,
+  author    = {{Trusted Computing Group}},
+  title     = {Trusted Platform Module Library Specification, Family 2.0, Level 00, Revision 01.59},
+  year      = {2019},
+  url       = {https://trustedcomputinggroup.org/resource/tpm-library-specification/}
+}
+
+
+@Manual{EKSpec,
+  author    = {{Trusted Computing Group}},
+  title     = {TCG EK Credential Profile For TPM Family 2.0, Level 00, Version 2.4, Revision 3},
+  year      = {2021},
+  url       = {https://trustedcomputinggroup.org/wp-content/uploads/TCG_IWG_EKCredentialProfile_v2p4_r3.pdf}
+}
+
+
 @Article{DevIDSpec-IEEE,
   author    = {{Institute of Electrical and Electronics Engineers}},
   title     = {{IEEE Standard for Local and Metropolitan Area Networks - Secure Device Identity}},
@@ -55,21 +129,43 @@
   year      = {2018},
   doi       = {10.1109/IEEESTD.2018.8423794},
   url       = {https://ieeexplore.ieee.org/document/8423794}
-  }
+}
 
 
-  @Article{KeyManagement,
+@Book{PracticalGuide,
+  author    = {Will Arthur and David Challener and Kenneth Goldman},
+  title     = {A Practical Guide to TPM 2.0: Using the Trusted Platform Module in the New Age of Security},
+  publisher = {Apress},
+  year      = {2015},
+  isbn      = {978-1-4302-6584-9},
+  doi       = {10.1007/978-1-4302-6584-9},
+  url       = {https://link.springer.com/content/pdf/10.1007/978-1-4302-6584-9.pdf},
+}
+
+@Article{KeyManagement,
   author    = {Elaine Barker},
   title     = {Recommendation for Key Management},
   journal   = {NIST Special Publication 800-57 Part 1 Revision 5},
   year      = {2020},
   doi       = {10.6028/NIST.SP800-57pt1r5},
   url       = {https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-57pt1r5.pdf},
-  }
+}
+
 
 @Article{CIC,
   author    = {Christine Paulin-Mohring},
   title     = {{Introduction to the Calculus of Inductive Constructions}},
   year      = {2014},
   url       = {https://inria.hal.science/hal-01094195/document}
-  }
+}
+
+
+@Book{LogicalFoundations,
+  author    = {Benjamin C. Pierce and Arthur Azevedo de Amorim and Chris Casinghino and Marco Gaboardi and Michael Greenberg and C{\u a}t{\u a}lin Hri{\c t}cu and Vilhelm Sj{\"o}berg and Brent Yorgey},
+  title     = {Logical Foundations},
+  series    = {Software Foundations series, volume 1},
+  publisher = {Electronic textbook},
+  year      = {2022},
+  version   = {6.2},
+  url       = {https://softwarefoundations.cis.upenn.edu/lf-current/index.html}
+}
