--- a/ku_thesis_template.tex
+++ b/ku_thesis_template.tex
@@ -34,8 +34,8 @@
 
 % Appendix, if needed.
 \appendix
-\import{appendix/}{appendix_1}
-\import{appendix/}{appendix_2}
-\import{appendix/}{appendix_3}
+%\import{appendix/}{appendix_1}
+%\import{appendix/}{appendix_2}
+%\import{appendix/}{appendix_3}
 
 \end{document}
