--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -22,7 +22,7 @@
 
 
 @MastersThesis{TPM12Model,
-  author    = {Brigid R. Halling},
+  author    = {Brigid Halling},
   title     = {{Towards a Formal Verification of the Trusted Platform Module}},
   school    = {University of Kansas},
   year      = {2013}
