--- a/ku_thesis_template.tex
+++ b/ku_thesis_template.tex
@@ -33,9 +33,7 @@
 \bibliography{thesis_bibliography}
 
 % Appendix, if needed.
-\appendix
-%\import{appendix/}{appendix_1}
-%\import{appendix/}{appendix_2}
-%\import{appendix/}{appendix_3}
+%\appendix
+
 
 \end{document}
