--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -31,7 +31,7 @@
 @InProceedings{PrivacyCAAnalysis-Chen,
   author    = {Chen, Liqun and Warinschi, Bogdan},
   booktitle = {2010 IEEE/IFIP International Conference on Embedded and Ubiquitous Computing}, 
-  title     = {Security of the TCG Privacy-CA Solution}, 
+  title     = {{Security of the TCG Privacy-CA Solution}}, 
   year      = {2010},
   pages     = {609-616},
   doi       = {10.1109/EUC.2010.98}
@@ -55,7 +55,7 @@
 @InProceedings{DAAAnalysis-Whit,
   author    = {Whitefield, Jorden and Chen, Liqun and Sasse, Ralf and Schneider, Steve and Treharne, Helen and Wesemeyer, Stephan},
   booktitle = {2019 IEEE European Symposium on Security and Privacy (EuroS\&P)}, 
-  title     = {A Symbolic Analysis of ECC-Based Direct Anonymous Attestation}, 
+  title     = {{A Symbolic Analysis of ECC-Based Direct Anonymous Attestation}}, 
   year      = {2019},
   pages     = {127-141},
   doi       = {10.1109/EuroSP.2019.00019}
@@ -114,7 +114,7 @@ year = {2018}
 
 
 @inproceedings{VRASED,
-title       = {VRASED: A Verified Hardware/Software Co-Design for Remote Attestation},
+title       = {{VRASED: A Verified Hardware/Software Co-Design for Remote Attestation}},
 author      = {Nunes, Ivan De Oliveira and Eldefrawy, Karim and Rattanavipanon, Norrathep and Steiner, Michael and Tsudik, Gene},
 booktitle   = {USENIX Security Symposium},
 pages       = {1429--1446},
@@ -124,7 +124,7 @@ year        = {2019}
 
 @Manual{DevIDSpec-TCG,
   author    = {{Trusted Computing Group}},
-  title     = {TPM 2.0 Keys for Device Identity and Attestation},
+  title     = {{TPM 2.0 Keys for Device Identity and Attestation}},
   year      = {2021},
   version   = {1.00},
   revision  = {12},
@@ -134,7 +134,7 @@ year        = {2019}
 
 @Manual{TPMSpec,
   author    = {{Trusted Computing Group}},
-  title     = {Trusted Platform Module Library Specification, Family 2.0, Level 00, Revision 01.59},
+  title     = {{Trusted Platform Module Library Specification, Family 2.0, Level 00, Revision 01.59}},
   year      = {2019},
   url       = {https://trustedcomputinggroup.org/resource/tpm-library-specification/}
 }
@@ -142,7 +142,7 @@ year        = {2019}
 
 @Manual{EKSpec,
   author    = {{Trusted Computing Group}},
-  title     = {TCG EK Credential Profile For TPM Family 2.0, Level 00, Version 2.4, Revision 3},
+  title     = {{TCG EK Credential Profile For TPM Family 2.0, Level 00, Version 2.4, Revision 3}},
   year      = {2021},
   url       = {https://trustedcomputinggroup.org/wp-content/uploads/TCG_IWG_EKCredentialProfile_v2p4_r3.pdf}
 }
@@ -160,7 +160,7 @@ year        = {2019}
 
 @Book{PracticalGuide,
   author    = {Will Arthur and David Challener and Kenneth Goldman},
-  title     = {A Practical Guide to TPM 2.0: Using the Trusted Platform Module in the New Age of Security},
+  title     = {{A Practical Guide to TPM 2.0: Using the Trusted Platform Module in the New Age of Security}},
   publisher = {Apress},
   year      = {2015},
   isbn      = {978-1-4302-6584-9},
@@ -170,7 +170,7 @@ year        = {2019}
 
 @Article{KeyManagement,
   author    = {Elaine Barker},
-  title     = {Recommendation for Key Management},
+  title     = {{Recommendation for Key Management}},
   journal   = {NIST Special Publication 800-57 Part 1 Revision 5},
   year      = {2020},
   doi       = {10.6028/NIST.SP800-57pt1r5},
@@ -188,7 +188,7 @@ year        = {2019}
 
 @Book{LogicalFoundations,
   author    = {Benjamin C. Pierce and Arthur Azevedo de Amorim and Chris Casinghino and Marco Gaboardi and Michael Greenberg and C{\u a}t{\u a}lin Hri{\c t}cu and Vilhelm Sj{\"o}berg and Brent Yorgey},
-  title     = {Logical Foundations},
+  title     = {{Logical Foundations}},
   series    = {Software Foundations series, volume 1},
   publisher = {Electronic textbook},
   year      = {2022},
