--- a/thesis_header.tex
+++ b/thesis_header.tex
@@ -43,7 +43,7 @@
 % Leave blank if you don't want to list prior credits
 % \priorcreds{B.M. Caffeine}{B.S. in Caffeine}
 \priorcreds{B.S. in Computer Science, University of Kansas, 2021}{B.S. in Mathematics, University of Kansas, 2021}
-\dept{Department of Computer Science}
+\dept{the Department of Electrical Engineering and Computer Science}
 \degreetitle{Master of Science in Computer Science}
 \papertype{Thesis} % or Dissertation 
 %  It is required to have 7 entries, even if some are empty, i.e., {}  for committee and role
