--- a/thesis_header.tex
+++ b/thesis_header.tex
@@ -53,7 +53,7 @@
 % BOTH dates must be included. 
 \datedefended{03 May 2023}
  % Since the date will likely be unknown, this keeps the blank line from floating above the "Date Approved: " line late signing.
-\dateapproved{TBD}
+\dateapproved{\phantom{TBD}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % After \makeatother, you put the packages you need. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
